3D View not refresh after changing Blending mode in NLA #48223

Closed
opened 2016-04-21 12:24:46 +02:00 by Julien Duroure · 6 comments
Member

System Information
Linux 14.04

Blender Version
Broken: 2.77a

3D View not refresh after changing Blending mode in NLA

Exact steps for others to reproduce the error
In attached file, select Action2, on Track2.
Change Blending from "Replace" to "Add"

  • You need to change frame to see modifications, 3D view is not live updated

bug_update_display.blend

**System Information** Linux 14.04 **Blender Version** Broken: 2.77a 3D View not refresh after changing Blending mode in NLA **Exact steps for others to reproduce the error** In attached file, select Action2, on Track2. Change Blending from "Replace" to "Add" - > You need to change frame to see modifications, 3D view is not live updated [bug_update_display.blend](https://archive.blender.org/developer/F304627/bug_update_display.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @JulienDuroure

Added subscriber: @JulienDuroure

Added subscriber: @mont29

Added subscriber: @mont29

Confirmed, and even found a nice crash when trying to add a fmodifier there… sigh :P

Confirmed, and even found a nice crash when trying to add a fmodifier there… *sigh* :P
Bastien Montagne self-assigned this 2016-04-22 15:07:04 +02:00

This issue was referenced by c41b2bd7c6

This issue was referenced by c41b2bd7c6771d48339f95da9dd34a7d2589e0d0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48223
No description provided.