Fix T48223: 3D View not refresh after changing Blending mode in NLA.

This fixes a lot of things in NLA RNA update handling (which basically did not update anything previously).

There are more update issues with this editor though...